[package]
name = "tonic-over-tarpc-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regular"
path = "src/regular.rs"

[[bin]]
name = "tarpc"
path = "src/tarpc.rs"


[dependencies]
futures = "0.3.31"
prost = "0.13.3"
tarpc = { version = "0.35.0", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
